Fri Aug 29 09:08:06 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Fix indentation.

Thu Aug 28 18:18:53 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add "internal" interface to allow
	  building ELITE_SET queries from raw xapian terms.

Thu Aug 28 17:29:24 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py,xappy/unittests/query_serialise.py: Add support
	  and tests for serialising the result of xappy.Query()

Thu Aug 28 13:49:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/query.py,xappy/searchconnection.py: Add methods to allow a
	  query to be serialised and unserialised.
	* xappy/unittests/query_serialise.py: Test the new query
	  serialisation stuff.

Tue Aug 26 16:59:54 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/fieldactions.py: Fix generation of field associations for
	  EXACT and FACET fields - was forgetting to add the term prefix.
	* xappy/searchconnection.py: Avoid returning relevant data items
	  more than once.

Tue Aug 26 09:07:57 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py: Remove a bit of debugging code which
	  broke backwards compatibility.

Tue Aug 26 08:35:07 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/datastructures.py,
	  xappy/doctests/indexerconnection_doctest1.txt,
	  xappy/doctests/indexerconnection_doctest2.txt,
	  xappy/doctests/indexerconnection_doctest3.txt,xappy/,
	  xappy/unittests/field_associations.py: Extend Field data
	  structure with a new member (and optional constructor parameter)
	  to store "associated" data.  This data will be returned in the
	  document data field instead of the original data, and is intended
	  to allow particular return data to be associated with a piece of
	  input data.  Documentation and examples still needed.  Also, add
	  new method to SearchResult to return a list of relevant fields,