@@ -1,3 +1,8 @@
+Fri Aug 29 09:24:33 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/query.py: Copy the __serialised member correctly when a
+	  Query is copied.
+
 Fri Aug 29 09:08:06 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* xappy/searchconnection.py: Fix indentation.
